--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,222 +1,137 @@
 * {
-  border: none;
-  border-radius: 0;
   font-family: "Nerd Font";
-  font-size: 12px;
+  font-size: 0.75rem;
+}
+
+#window,
+#workspaces {
+  margin: 0 2px;
 }
 
 window#waybar {
-  background: rgba(21, 18, 27, 0);
-  color: #cdd6f4;
+  background-color: rgba(26, 27, 38, 0.5);
+  color: #ffffff;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  margin: 16px;
 }
 
-tooltip {
-  background: #1e1e2e;
-  border-radius: 10px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #11111b;
+window#waybar.hidden {
+  opacity: 0.2;
 }
 
 #workspaces button {
-  padding: 5px;
-  color: #313244;
-  margin-right: 5px;
+  padding: 0 5px;
+  color: #7984A4;
+}
+
+#workspaces button.focused {
+  color: #bf616a;
 }
 
 #workspaces button.active {
-  color: #a6adc8;
-}
-
-#workspaces button.focused {
-  color: #a6adc8;
-  background: #eba0ac;
-  border-radius: 10px;
+  color: #ffffff;
 }
 
 #workspaces button.urgent {
-  color: #11111b;
-  background: #a6e3a1;
-  border-radius: 10px;
+  background-color: #eb4d4b;
 }
 
-#workspaces button:hover {
-  background: #11111b;
-  color: #cdd6f4;
-  border-radius: 10px;
+.modules-left > widget:first-child > #workspaces {
+  margin-left: 0;
 }
 
-#custom-powermenu {
-  margin-top: 6px;
-  margin-left: 12px;
-  padding-left: 15px;
-  padding-right: 20px;
-  border-radius: 5px;
-  transition: none;
-  background: #2e3440;
+.modules-right > widget:last-child > #workspaces {
+  margin-right: 0;
 }
 
-#custom-changebg {
-  margin-top: 6px;
-  margin-right: 12px;
-  padding-left: 15px;
-  padding-right: 20px;
-  border-radius: 5px;
-  transition: none;
-  background: #2e3440;
+#window {
+  color: #64727d;
 }
 
-#mode {
-  margin-top: 6px;
-  margin-left: 12px;
-  padding-left: 15px;
-  padding-right: 20px;
-  border-radius: 5px;
-  transition: none;
-  background: #2e3440;
-}
-
-#workspaces {
-  margin-top: 6px;
-  margin-left: 12px;
-  padding-left: 15px;
-  padding-right: 20px;
-  border-radius: 5px;
-  transition: none;
-  background: #2e3440;
-}
-
-#workspaces button {
-  transition: none;
-  color: #4c566a;
-  background: transparent;
-  border-radius: 0px;
-}
-
-#workspaces button.occupied {
-  transition: none;
-  color: #a3be8c;
-  background: transparent;
-  font-size: 4px;
-}
-
-#workspaces button.focused {
-  color: #81a1c1;
-  border-bottom: 2px solid #81a1c1;
-}
-
-#workspaces button:hover {
-  transition: none;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: #81a1c1;
-}
-
-#temperature {
-  margin-top: 6px;
-  margin-left: 12px;
-  /*margin-right: 12px;*/
-  border-radius: 5px;
-  transition: none;
-  padding: 0 10px;
-  color: #a3be8c;
-  background: #2e3440;
-}
-
-#pulseaudio {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 0 10px;
-  color: #a3be8c;
-  background: #2e3440;
-}
-
-#battery {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 10px 10px;
-  color: #a3be8c;
-  background: #2e3440;
-}
-
-#battery.critical:not(.charging) {
-  background-color: #d8dee9;
-  color: #2e3440;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-
-@keyframes blink {
-  to {
-    background-color: #bf616a;
-    color: #d8dee9;
-  }
-}
-
-#backlight {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 10px 10px;
-  color: #88c0d0;
-  background: #2e3440;
+#clock,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#mpd,
+#bluetooth,
+#temperature,
+#custom-hyprPicker,
+#custom-launcher,
+#custom-power-menu,
+#custom-background,
+#custom-spotify {
+  padding: 0 5px;
+  color: #7984A4;
+  background-color: transparent;
+  box-shadow: inset 0 -3px transparent;
+  border: none;
+  border-radius: 0;
 }
 
 #cpu {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 10px 10px;
-  color: #88c0d0;
-  background: #2e3440;
+  color: #fb958b;
 }
 
 #memory {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 10px 10px;
-  color: #88c0d0;
-  background: #2e3440;
+  color: #ebcb8b;
+}
+
+#custom-launcher,
+#custom-power-menu {
+  color: #6a92d7;
+  margin: 0 10px;
+}
+
+#pulseaudio {
+  color: #7d9bba;
 }
 
 #clock {
-  margin-top: 6px;
-  margin-left: 12px;
-  margin-right: 12px;
-  border-radius: 5px;
-  transition: none;
-  padding: 10px 10px;
-  color: #a3be8c;
-  background: #2e3440;
+  color: #c8d2e0;
 }
 
-#tray {
-  margin-top: 6px;
-  margin-right: 12px;
-  border-radius: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  color: #d8dee9;
-  background: #2e3440;
+#battery {
+  color: #c0caf5;
+}
+
+#bluetooth {
+  color: #707d9d;
+}
+
+#bluetooth.disconnected {
+  color: #f53c3c;
 }
 
 #network {
-  margin-top: 6px;
-  margin-left: 12px;
-  border-radius: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  color: #d8dee9;
-  background: #2e3440;
+  color: #b48ead;
+}
+
+#network.disconnected {
+  color: #f53c3c;
+}
+
+#temperature {
+  color: #ffa000;
+}
+
+#temperature.critical {
+  background-color: #eb4d4b;
+}
+
+#custom-spotify {
+  color: #66cc99;
+}
+
+#custom-background {
+  color: #abb2bf;
 }
